--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -41,7 +41,7 @@ The assistant automatically searches your knowledge base when generating tests a
 
 **Test Management**
 
-The assistant can list your existing [tests](/core-concepts/tests-and-results), generate new test cases based on your requirements, run tests in the background, and fetch detailed information about specific tests including their steps, [configurations](/core-concepts/configs), and [dependencies](/core-concepts/dependencies). It understands test scenarios (grouping folders) and [test plans](/core-concepts/test-plans), making it easy to organize and trigger your test suite.
+The assistant can list your existing [tests](/core-concepts/tests-and-results), generate new test cases based on your requirements, run tests in the background, and fetch detailed information about specific tests including their steps, [configurations](/core-concepts/configs), and [dependencies](/core-concepts/dependencies). It understands test scenarios (grouping folders) and [test plans](/core-concepts/test-plans), making it easy to organize and trigger your test suite. You can also edit existing tests through conversation - describe changes, review a visual diff, and apply with one click. The test runs automatically after applying.
 
 **Application Analysis**
 
